styles/Map.module.css
.container {
  padding: 0 2rem;
  position:relative;
  overflow:hidden;
  width:100vw;
  height:100vh;
}
.header, .sidebar, .attributions, .legend {  
    background-color: rgba(0,0,0,0.7);
    z-index:2;
    padding: .5rem 1rem .5rem .5rem;
    box-shadow: 0 8px 32px 0 rgba( 0, 0, 0, 0.37 );
    backdrop-filter: blur( 11px );
    -webkit-backdrop-filter: blur( 11px );
}

.header {
    position:absolute;
    left:0;
    top:0;
    width:100%;
    z-index:2;
}

.title {
  margin: 0;
  line-height: 1.15;
  font-size: 2rem;
}

.sidebar {
    position:absolute;
    top:5em;
    left:0;
    width:200px;
}

.sidebar h3 {
    margin:0;
    padding:0;
}

.map {
    position:absolute;
    width:100vw;
    height:100vh;
    background:tan;
    left:0;
    top:0;
    z-index:1;
}
.mapContainer {
    width:100%;
    height:100%;
}

.bottomRight {
    position:absolute;
    bottom:0;
    right:0;
    z-index:2;
    font-size:.65rem;
    max-width:70ch;
}
.attributions span {
    margin-left:1em;
}

.legend {
    display: flex;
    margin-bottom:1em;
}

